welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i <- nums) {
           ^arrayFront9:9: error: type mismatch;
 found   : Unit
 required: Boolean
    else if (len >= 4) {
         ^